--- a/AlmacenMVC/AlmacenMVC.csproj
+++ b/AlmacenMVC/AlmacenMVC.csproj
@@ -211,6 +211,7 @@
     <Content Include="Views\Home\Usuarios.cshtml" />
     <Content Include="Views\Home\Registro.cshtml" />
     <Content Include="Views\Usuarios\Index.cshtml" />
+    <Content Include="Views\Usuarios\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
