--- a/AlmacenMVC/AlmacenMVC.csproj
+++ b/AlmacenMVC/AlmacenMVC.csproj
@@ -212,6 +212,9 @@
     <Content Include="Views\Home\Registro.cshtml" />
     <Content Include="Views\Usuarios\Index.cshtml" />
     <Content Include="Views\Usuarios\Edit.cshtml" />
+    <Content Include="Views\Usuarios\Details.cshtml" />
+    <Content Include="Views\Usuarios\Delete.cshtml" />
+    <Content Include="Views\Usuarios\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
